--- a/SilkScreenOrder/app/partials/orderform.html
+++ b/SilkScreenOrder/app/partials/orderform.html
@@ -1,5 +1,23 @@
-﻿
+﻿<h1>OrderForm</h1>
+
+<div class="form-group">
+    <label for="OrderDate">Order Date</label>
+    <input type="datetime" class="form-control" id="OrderDate" placeholder="Order Date" ng-model="newOrder.OrderDate" />
+</div>
+<div class="form-group">
+    <label for="OrderDate">Due Date</label>
+    <input type="datetime" class="form-control" id="OrderDate" placeholder="Due Date" ng-model="newOrder.OrderDueDate" />
+</div>
+<div class="form-group">
+    <label for="SalesPerson">Sales Person</label>
+    <input type="text" class="form-control" id="SalesPerson" placeholder="Seller" ng-model="newOrder.SalesPerson" />
+</div>
+
+
+
+
 <!--CustomerModel-->
+<h3>Customer Info</h3>
 <div class="form-group">
     <label for="CustomerName">Customer Name</label>
     <input type="text" class="form-control" id="CustomerName" placeholder="Customer Name" ng-model="newOrder.CustomerName" />
@@ -8,40 +26,85 @@
     <label for="CustomerAddress">Customer Address</label>
     <input type="text" class="form-control" id="CustomerName" placeholder="Customer Address" ng-model="newOrder.CustomerAddress" />
 </div>
-<button ng-click="submitCustomer(newOrder)">Submit Customer</button>
+<div class="form-group">
+<label for="CustomerPhone">Customer Phone Number</label>
+<input type="text" class="form-control" id="CustomerPhone" placeholder="Customer Phone" ng-model="newOrder.CustomerPhone" />
+</div>
 
+<div>
+    <h3>if this is a new customer click here</h3>
+    <button class="btn-info" ng-click="submitCustomer(newOrder)">Submit Customer</button>
+</div>
 
 <!--DesignModel-->
+<h3>Design info</h3>
 <div class="form-group">
     <label for="NumberOfColors">Number Of Colors</label>
-    <input type="number" class="form-control" id="NumberOfColors" placeholder="Number Of Colors" ng-model="newOrder.NumberOfColors" />
+    <input type="number" class="form-control" id="NumberOfColors" placeholder="Number Of Colors" ng-model="newOrder.AmountOfColorsOfDesign" />
 </div>
 <div class="form-group">
     <label for="DesignFee">Design Fee</label>
     <input type="text" class="form-control" id="DesignFee" placeholder="Design Fee" ng-model="newOrder.DesignFee" />
 </div>
-<button ng-click="submitDesign(newOrder)">Submit Design</button>
+<div class="form-group">
+    <label for="DesignHeight">Height of Design</label>
+    <input type="number" class="form-control" id="DesignHeight" placeholder="Design Height" ng-model="newOrder.DesignHeight" />
+</div>
+<div class="form-group">
+    <label for="DesignWidth">Design Fee</label>
+    <input type="number" class="form-control" id="DesighWidth" placeholder="Design Width" ng-model="newOrder.DesignWidth" />
+</div>
+<div class="form-group">
+    <label for="LogoLocations">Locations of Logo</label>
+    <input type="text" class="form-control" id="LogoLocations" placeholder="Locations Of Logo" ng-model="newOrder.LogoLocations" />
+</div>
+
+<div>
+<h3>if this is a new design click here to submit to database</h3>
+<button class="btn-info" ng-click="submitDesign(newOrder)">Submit Design</button>
+    </div>
+
+
 
 <!--ApparelModel-->
+<h3>Apparel Info</h3>
 <div class="form-group">
-    <label for="NumberOfItems">Number Of Items</label>
-    <input type="number" class="form-control" id="NumberOfItems" placeholder="Number Of Items" ng-model="newOrder.NumberOfItems" />
+    <label for="ApparelType">Apparel Type</label>
+    <input type="text" class="form-control" id="ApparelType" placeholder="Apparel Type" ng-model="newOrder.ApparelType" />
 </div>
 <div class="form-group">
-    <label for="ApparelBrand">Apparel Brand</label>
+    <label for="ApparelBrand">Brand</label>
     <input type="text" class="form-control" id="ApparelBrand" placeholder="Apparel Brand" ng-model="newOrder.ApparelBrand" />
 </div>
-
-<button ng-click="submitApparel(newOrder)">Submit Apparel</button>
-
-
-<!--OrderModel-->
 <div class="form-group">
-    <label for="OrderDate">Order Date</label>
-    <input type="datetime" class="form-control" id="OrderDate" placeholder="Order Date" ng-model="newOrder.OrderDate" />
+    <label for="ApparelQuantity">Quantity</label>
+    <input type="number" class="form-control" id="ApparelQuantity" placeholder="Quantity" ng-model="newOrder.ApparelQuantity" />
 </div>
 <div class="form-group">
-    <label for="OrderDate">Order Date</label>
-    <input type="datetime" class="form-control" id="OrderDate" placeholder="Due Date" ng-model="newOrder.DueDate" />
+    <label for="ApparelPricePerPiece">Price Per Piece</label>
+    <input type="number" class="form-control" id="ApparelPricePerPiece" placeholder="Price per piece" ng-model="newOrder.ApparelPricePerPiece" />
 </div>
-<button ng-click="submitOrder(newOrder)">Submit Order</button>
+<div class="form-group">
+    <label for="ApparelColor">Apparel Color</label>
+    <input type="text" class="form-control" id="ApparelColor" placeholder="Price per piece" ng-model="newOrder.ApparelColor" />
+</div>
+
+<!--AdditonalInfo-->
+
+<div class="form-group">
+    <label for="InkColorsToBeUsed">Color of Ink(s)</label>
+    <input type="text" class="form-control" id="InkColorsToBeUsed" placeholder="Ink Color" ng-model="newOrder.InkColorsToBeUsed" />
+</div>
+
+<div class="form-group">
+    <label for="AdditionalNotes">Additional Notes</label>
+    <textarea ng-model="newOrder.AdditionalNotes"></textarea>
+</div>
+
+<div class="form-group">
+    <label for="TotalPrice">Total Price</label>
+    <input type="number" class="form-control" id="TotalPrice" placeholder="Total Price" ng-model="newOrder.TotalPrice" />
+</div>
+
+
+<button class="btn-danger" ng-click="submitOrder(newOrder)">Submit Order</button>
