--- a/SilkScreenOrder/Views/Home/Index.cshtml
+++ b/SilkScreenOrder/Views/Home/Index.cshtml
@@ -23,6 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/#!/orders">Orders</a></li>
                     <li><a href="/#!/orderform">Order Form</a></li>
+                    <li><a href="/#!/customer">Customer List</a></li>
+
                 </ul>
             </div>
         </div>
