--- a/SilkScreenOrder/app/partials/orders.html
+++ b/SilkScreenOrder/app/partials/orders.html
@@ -1,10 +1,11 @@
 ﻿<div><h2>YOU WIN</h2></div>
 
-<ul>
+<!--<ul>
     <li ng-repeat="order in orderlist">
         <strong>Order Date:</strong>{{order.OrderDate | date:'MM/dd/yy'}} <br />
         <strong>Order Due Date:</strong> {{order.OrderDueDate | date:'MM/dd/yy'}} <br />
         {{order.SalesPerson}}<br />
+        
         {{order.CustomerName}} <br />
         {{order.CustomerAddress}}<br />
         {{order.ApparelType}}<br />
@@ -24,9 +25,35 @@
 
 
     </li>
-</ul>
+</ul>-->
 
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="table-responsive">
+                <table class="table table-bordered ">
+                    <thead>
+                        <tr>
+                            <th>OrderNumber</th>
+                            <th>Sales Person</th>
+                            <th>Customer</th>
+                            <th>Quantity</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="order in orderlist">
+                            <td><a href="#!/orders/details/{{order.OrderFormId}}">{{order.OrderNumber}}</a></td>
+                            <td>{{order.SalesPerson}}</td>
+                            <td>{{order.CustomerName}}</td>
+                            <td>{{order.ApparelQuantity}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 
      
