--- a/SilkScreenOrder/app/partials/orderform.html
+++ b/SilkScreenOrder/app/partials/orderform.html
@@ -40,7 +40,7 @@
             </div>
             <!--<div>
                 <button class="btn-info" ng-click="submitCustomer(newOrder)">
-                    Submit Customer
+                    Continue
                 </button>
             </div>-->
         </div>
@@ -75,7 +75,7 @@
                 <input type="text" class="form-control" id="InkColorsToBeUsed" placeholder="Ink Color" ng-model="newOrder.InkColorsToBeUsed" />
             </div>
         </div>
-        <!--<button class="btn-info" ng-click="submitDesign(newOrder)">Submit Design</button>-->
+        <!--<button class="btn-info" ng-click="submitDesign(newOrder)">Continue</button>-->
     </div> <!-- end of row -->
 
     <br />
