--- a/SilkScreenOrder/Views/Home/Index.cshtml
+++ b/SilkScreenOrder/Views/Home/Index.cshtml
@@ -9,37 +9,7 @@
 
 </head>
 <body ng-app="SilkScreen">
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href>SUP</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                   
-
-                </ul>
-            </div>
-        </div>
-    </div>*@
-
-    @*<div class="container body-content">
-
-        <div ng-view>
-
-        </div>
-
-
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>*@
+    
 
     <div class="row">
      
@@ -86,5 +56,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
+    <script src="https://use.fontawesome.com/18b3f051aa.js"></script>
 </body>
 </html>
