--- a/SilkScreenOrder/app/partials/home.html
+++ b/SilkScreenOrder/app/partials/home.html
@@ -1,3 +1,74 @@
 ﻿
+    <div class="row">
+        <!-- OrderForm Panel -->
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-tasks fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div>Order Form</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#!/orderform">
+                    <div class="panel-footer">
+                        <span class="pull-left">Order Forms</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
 
-<button ng-click="startOrder()">GO FORTH</button>
+        <!-- Orders Panel-->
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-shopping-cart fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div>Show Orders!</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#!/orders">
+                    <div class="panel-footer">
+                        <span class="pull-left">View Details</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Customer Panel -->
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-users fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div>Customers!</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#!/customer">
+                    <div class="panel-footer">
+                        <span class="pull-left">View List</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        
+    </div>  <!-- end of row -->
+
